# MetNum-II

./: CMakeLists.txt  Integral-Methods.sln  main.cpp
Integral-Methods/: Integral-Methods.cpp  Integral-Methods.vcxproj
include/IPV/: adams_bashforth_method_second_order.hpp  adams_bashforth_method_third_order.hpp  euler_method_explict.hpp  euler_method_implict.hpp  ipv.hpp  range_kutta_method_fourth_order.hpp  range_kutta_method_second_order.hpp  range_kutta_method_third_order.hpp
include/context_class/: context.hpp
include/derivate/: derivate.hpp  first_derivate_backward_approach.hpp  first_derivate_central_approach.hpp  first_derivate_forward_approach.hpp  second_derivate_backward_approach.hpp  second_derivate_central_approach.hpp  second_derivate_forward_approach.hpp  third_derivate_newton_approach.hpp
include/integral/: first_degree_integral_newtoncotes.hpp  first_degree_integral_open_newtoncotes.hpp  integral.hpp  integral_gauss.hpp  second_degree_integral_gausschebyshev.hpp  second_degree_integral_gausshermite.hpp  second_degree_integral_gausslaguerre.hpp  second_degree_integral_gausslegendre.hpp  second_degree_integral_open_milnerule.hpp  second_degree_integral_simpson_onethird.hpp  (+6 more)
src/IPV/: CMakeLists.txt  adams_bashforth_method_second_order.cpp  adams_bashforth_method_third_order.cpp  euler_method_explict.cpp  euler_method_implict.cpp  ipv.cpp  range_kutta_method_fourth_order.cpp  range_kutta_method_second_order.cpp  range_kutta_method_third_order.cpp
src/derivate/: CMakeLists.txt  derivate.cpp  first_derivate_backward_approach.cpp  first_derivate_central_approach.cpp  first_derivate_foraward_approach.cpp  second_derivate_backward_approach.cpp  second_derivate_central_approach.cpp  second_derivate_forward_approach.cpp  third_derivate_newton_approach.cpp
src/eigenvalues_eingenvectors/: CMakeLists.txt
src/eigenvalues_eingenvectors/QR/: qr_method.cpp
src/eigenvalues_eingenvectors/house_holder/: house_holder.cpp
src/eigenvalues_eingenvectors/jacobi_method/: jacobi_method.cpp
src/eigenvalues_eingenvectors/power_methods/: inverse_power_method.cpp  inverse_power_method_LU.cpp  power_method.cpp  power_methods.cpp  shifted_power_method.cpp
src/integral/: CMakeLists.txt  first_degree_integral_newtoncotes.cpp  first_degree_integral_open_newtoncotes.cpp  integral.cpp  integral_gauss.cpp  second_degree_integral_gausschebyshev.cpp  second_degree_integral_gausshermite.cpp  second_degree_integral_gausslaguerre.cpp  second_degree_integral_gausslegendre.cpp  second_degree_integral_open_milnerule.cpp  second_degree_integral_simpson_onethird.cpp  third_degree_integral_gausschebyshev.cpp  third_degree_integral_gausshermite.cpp  third_degree_integral_gausslaguerre.cpp  third_degree_integral_gausslegendre.cpp  third_degree_integral_open_newtoncotes.cpp  third_degree_integral_simpson_threeEighths.cpp
types/: functions.hpp  house_holder_result_type.hpp  jacobi_method_result_type.hpp  jacobi_scan_result_type.hpp  power_method_result_type.hpp  qr_decomposition_result_type.hpp  qr_method_result_type.hpp
(+29 files in other folders)
